--- a/index.html
+++ b/index.html
@@ -12,12 +12,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- FONT AWESEOME -->
-    <link rel="stylesheet" href="./vendor/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="./vendor/fontawesome/css/all.min.css">
+
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
-    
+    <section class="onboarding-section" >
+        <div class="container tdi_2">
+            <div class="row tdi_1" >
+                <div class="label">
+                    <p> <i class="fas fa-star    "></i>60k+ <span>Premium recipes</span></p>
+                </div>
+                <div class="content">
+                    <div class="caption">
+                        <h1>Let’s Cooking</h1>
+                    </div>
+                    <div class="header-title">
+                        <p>Find best recipes for cooking</p>
+                    </div>
+                    <button class="fill-red-btn" type="submit">Start cooking<i class="fas fa-arrow-right    "></i> </button>
+                </div>
+            </div>
+            <div class="effect" style="background-image: url(./image/Bgfood.png);"></div>
+        </div>
+    </section>
 </body>
 </html>
