html and css updated

--- a/index.html
+++ b/index.html
@@ -19,24 +19,17 @@
 
 </head>
 <body>
-    <section class="onboarding-section" >
-        <div class="container tdi_2">
-            <div class="row tdi_1" >
-                <div class="label">
-                    <p> <i class="fas fa-star    "></i>60k+ <span>Premium recipes</span></p>
-                </div>
-                <div class="content">
-                    <div class="caption">
-                        <h1>Let’s Cooking</h1>
-                    </div>
-                    <div class="header-title">
-                        <p>Find best recipes for cooking</p>
-                    </div>
-                    <button class="fill-red-btn" type="submit">Start cooking<i class="fas fa-arrow-right    "></i> </button>
-                </div>
-            </div>
-            <div class="effect" style="background-image: url(./image/Bgfood.png);"></div>
-        </div>
-    </section>
+   <section class="spalsh-screen">
+       <div class="msg">
+           <p>&#9733; 60k+ <span>Premium recipes</span> </p>
+       </div>
+       <div class="splash-title">
+           <h3>Let’s Cooking</h3>
+           <div class="splash-content">
+               <p>Find best recipes for cooking</p>
+           </div>
+           <a href="" class="fill-red-btn">Start cooking &#8594;</a>
+       </div>
+   </section>
 </body>
 </html>
