html and css updated

--- a/createrecipi.html
+++ b/createrecipi.html
@@ -19,7 +19,35 @@
 </head>
 <body>
     <section class="create-recipe-section">
-        
+        <div class="container">
+            <div class="navigation-arrow">
+                <a href="#"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+                <a href=""><i class="fa fa-ellipsis-v" aria-hidden="true"></i></a>
+            </div>
+            <div class="recipe-title tdi_6">
+                <h3 class="title">How to make french
+                    toast</h3>
+            </div>
+            <div class="recipe-details save-recipe">
+                <div class="recipe-image" style="background-image: url(./image/snack.jpg);">
+                    <div class="play-button-icon">
+                        <button class="play" type="submit">
+                            <div class="icon-background"></div>
+                            <i class="fas fa-play    "></i>
+                        </button>
+                    </div>                
+                    <button class="recipe-bookmark" type="submit">
+
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M9.33359 4.17999C10.3808 2.78476 12.3608 2.50233 13.7568 3.54933C15.1522 4.5967 15.4337 6.57783 14.3867 7.97284L13.365 9.33397C13.3487 9.36623 13.3293 9.39751 13.3069 9.42743C13.2844 9.45734 13.2598 9.48467 13.2334 9.50936L12.1092 11.007C10.8812 12.6431 9.47453 14.5171 8.75991 15.4688C7.90078 16.6139 6.66919 16.979 5.71881 17.0709C5.24028 17.1172 4.81469 17.0967 4.50885 17.0651C4.35522 17.0492 4.22985 17.0302 4.14079 17.0148C4.09621 17.0071 4.06057 17.0002 4.03488 16.995L4.00386 16.9885L3.99413 16.9864L3.99076 16.9856L3.98944 16.9853C3.98919 16.9853 3.98838 16.9851 4.12846 16.376L3.58586 16.6862L3.58489 16.6845L3.58316 16.6814L3.57827 16.6727L3.56304 16.6448C3.5506 16.6217 3.53374 16.5896 3.51351 16.5492C3.47311 16.4685 3.419 16.3541 3.35983 16.2119C3.24204 15.9287 3.10118 15.5276 3.01044 15.0559C2.82981 14.1171 2.83845 12.8335 3.70684 11.6759L9.33359 4.17999ZM3.58586 16.6862C3.67247 16.8374 3.81855 16.946 3.98838 16.9851L4.12846 16.376C3.58612 16.6866 3.58599 16.6864 3.58586 16.6862ZM12.6747 8.17142L13.3869 7.22249C14.0199 6.37917 13.8495 5.18183 13.0066 4.5492C12.1626 3.91636 10.9661 4.0873 10.3333 4.93034L9.62101 5.87929L12.6747 8.17142ZM8.8706 6.87898L11.9243 9.17114L11.1095 10.2566C9.88151 11.8927 8.47469 13.7669 7.76015 14.7185C7.19096 15.4773 6.35682 15.7534 5.59852 15.8267C5.22267 15.863 4.88316 15.8471 4.63749 15.8217C4.60595 15.8184 4.57609 15.815 4.54804 15.8116C4.53708 15.7866 4.52569 15.76 4.51398 15.7318C4.42002 15.5059 4.30875 15.1879 4.23793 14.8198C4.09543 14.0791 4.12596 13.2002 4.70674 12.4261L8.8706 6.87898ZM10.4879 16.2567C10.4879 15.9116 10.7678 15.6317 11.1129 15.6317H16.4271C16.7723 15.6317 17.0521 15.9116 17.0521 16.2567C17.0521 16.6019 16.7723 16.8817 16.4271 16.8817H11.1129C10.7678 16.8817 10.4879 16.6019 10.4879 16.2567Z" fill="#E23E3E"/>
+                        </svg>   
+
+                    </button>                    
+                </div>
+                <div class="field"></div>
+            </div>
+
+        </div>
     </section>
 </body>
 </html>
