--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
 </head>
 <body>
    <section class="spalsh-screen">
-       <div class="msg">
-           <p>&#9733; 60k+ <span>Premium recipes</span> </p>
-       </div>
-       <div class="splash-title">
-           <h3>Let’s Cooking</h3>
-           <div class="splash-content">
-               <p>Find best recipes for cooking</p>
+       <div class="row">
+           <div class="msg">
+               <p>&#9733; 60k+ <span>Premium recipes</span> </p>
            </div>
-           <a href="" class="fill-red-btn">Start cooking &#8594;</a>
+           <div class="splash-title">
+               <h3>Let’s Cooking</h3>
+               <div class="splash-content">
+                   <p>Find best recipes for cooking</p>
+               </div>
+               <a href="" class="fill-red-btn">Start cooking &#8594;</a>
+           </div>
        </div>
    </section>
 </body>
