html and css updated

--- a/createrecipi.html
+++ b/createrecipi.html
@@ -44,7 +44,62 @@
 
                     </button>                    
                 </div>
-                <div class="field"></div>
+                <div class="field">
+                    <p>Bento lunch box ideas for work|</p>
+                </div>
+                <div class="serve">
+                    <div class="ingredients-item">
+                        <div class="server-icon-text">
+                            <p> <span>
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M11.844 6.46868C11.844 8.67181 10.0411 10.4374 7.79144 10.4374C5.54257 10.4374 3.73891 8.67181 3.73891 6.46868C3.73891 4.26554 5.54257 2.5 7.79144 2.5C10.0411 2.5 11.844 4.26554 11.844 6.46868ZM1.66699 14.9311C1.66699 12.8917 4.48826 12.3814 7.79144 12.3814C11.1125 12.3814 13.9159 12.9093 13.9159 14.9503C13.9159 16.9897 11.0946 17.5 7.79144 17.5C4.47033 17.5 1.66699 16.9722 1.66699 14.9311ZM13.4782 6.54062C13.4782 7.66255 13.1341 8.70942 12.5307 9.57902C12.4679 9.66845 12.5233 9.78903 12.6326 9.80819C12.7843 9.83295 12.94 9.84812 13.099 9.85131C14.6809 9.89204 16.1005 8.89468 16.4927 7.39265C17.0741 5.16396 15.3683 3.16286 13.1952 3.16286C12.9596 3.16286 12.7337 3.18681 12.5136 3.23073C12.4834 3.23712 12.4508 3.25149 12.4345 3.27705C12.4133 3.30979 12.4288 3.35211 12.45 3.38006C13.1031 4.2768 13.4782 5.36839 13.4782 6.54062ZM16.098 11.4186C17.1613 11.6222 17.8601 12.0366 18.1496 12.6411C18.395 13.1362 18.395 13.7112 18.1496 14.2062C17.7068 15.1421 16.2782 15.4432 15.723 15.5206C15.608 15.5366 15.5159 15.4408 15.5281 15.3274C15.8118 12.7338 13.5556 11.504 12.9718 11.2213C12.9474 11.2078 12.9416 11.1886 12.9441 11.1758C12.9457 11.1678 12.9563 11.1551 12.9751 11.1527C14.2381 11.1287 15.5966 11.2988 16.098 11.4186Z" fill="#E23E3E"/>
+                                </svg>
+                                </span> Serves</p>
+                        </div>
+                        <div class="server-number-arrow">
+                            <p>01 
+                            <a href="#">
+                                <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.89062 0.228163C8.60721 0.531456 8.6082 1.02214 8.89283 1.32413L13.5121 6.22512H0.727264L0.628579 6.2322C0.2736 6.28351 0 6.60775 0 7.00009C0 7.42809 0.325607 7.77505 0.727264 7.77505H13.5105L8.89279 12.6759L8.8222 12.7627C8.61036 13.0656 8.633 13.4962 8.89066 13.7719C9.17408 14.0752 9.63456 14.0762 9.91916 13.7742L15.7687 7.56671C15.9048 7.43133 15.9921 7.24092 15.9993 7.02875C16.0067 6.82026 15.9355 6.60921 15.7857 6.45032L9.91912 0.225803L9.8374 0.150955C9.55223 -0.0734967 9.14825 -0.0475586 8.89062 0.228163Z" fill="#181818"/>
+                                </svg>
+                                </a></p>
+                        </div>
+                    </div>
+                    <div class="ingredients-item">
+                        <div class="server-icon-text">
+                            <p> <span>
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M11.844 6.46868C11.844 8.67181 10.0411 10.4374 7.79144 10.4374C5.54257 10.4374 3.73891 8.67181 3.73891 6.46868C3.73891 4.26554 5.54257 2.5 7.79144 2.5C10.0411 2.5 11.844 4.26554 11.844 6.46868ZM1.66699 14.9311C1.66699 12.8917 4.48826 12.3814 7.79144 12.3814C11.1125 12.3814 13.9159 12.9093 13.9159 14.9503C13.9159 16.9897 11.0946 17.5 7.79144 17.5C4.47033 17.5 1.66699 16.9722 1.66699 14.9311ZM13.4782 6.54062C13.4782 7.66255 13.1341 8.70942 12.5307 9.57902C12.4679 9.66845 12.5233 9.78903 12.6326 9.80819C12.7843 9.83295 12.94 9.84812 13.099 9.85131C14.6809 9.89204 16.1005 8.89468 16.4927 7.39265C17.0741 5.16396 15.3683 3.16286 13.1952 3.16286C12.9596 3.16286 12.7337 3.18681 12.5136 3.23073C12.4834 3.23712 12.4508 3.25149 12.4345 3.27705C12.4133 3.30979 12.4288 3.35211 12.45 3.38006C13.1031 4.2768 13.4782 5.36839 13.4782 6.54062ZM16.098 11.4186C17.1613 11.6222 17.8601 12.0366 18.1496 12.6411C18.395 13.1362 18.395 13.7112 18.1496 14.2062C17.7068 15.1421 16.2782 15.4432 15.723 15.5206C15.608 15.5366 15.5159 15.4408 15.5281 15.3274C15.8118 12.7338 13.5556 11.504 12.9718 11.2213C12.9474 11.2078 12.9416 11.1886 12.9441 11.1758C12.9457 11.1678 12.9563 11.1551 12.9751 11.1527C14.2381 11.1287 15.5966 11.2988 16.098 11.4186Z" fill="#E23E3E"/>
+                                </svg>
+                            </span> Serves</p>
+                        </div>
+                        <div class="server-number-arrow">
+                            <p>01 
+                            <a href="#">
+                                <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.89062 0.228163C8.60721 0.531456 8.6082 1.02214 8.89283 1.32413L13.5121 6.22512H0.727264L0.628579 6.2322C0.2736 6.28351 0 6.60775 0 7.00009C0 7.42809 0.325607 7.77505 0.727264 7.77505H13.5105L8.89279 12.6759L8.8222 12.7627C8.61036 13.0656 8.633 13.4962 8.89066 13.7719C9.17408 14.0752 9.63456 14.0762 9.91916 13.7742L15.7687 7.56671C15.9048 7.43133 15.9921 7.24092 15.9993 7.02875C16.0067 6.82026 15.9355 6.60921 15.7857 6.45032L9.91912 0.225803L9.8374 0.150955C9.55223 -0.0734967 9.14825 -0.0475586 8.89062 0.228163Z" fill="#181818"/>
+                                </svg>
+                            </a></p>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="save-recipe-ingredients">
+                <div class="ingredient">
+                    <p>Ingredients</p>
+                </div>
+                <form action="" class="save-item">
+                    <div class="input-content">
+                        <div class="type1">
+                            <input type="text" name="" id="">
+                        </div>
+                        <div class="type2">
+                            <input type="text" name="" id="">
+                        </div>
+                        <span>-</span>
+                    </div>
+                </form>
             </div>
 
         </div>
