--- a/recipedetail.html
+++ b/recipedetail.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="ingredients-items">
                     <div class="ingredient">
-                        <p>ingredients</p><span>5 items</span>
+                        <p>Ingredients</p><span>5 items</span>
                     </div>
                     <div class="ingredients-item">
                         <div class="ingredients-icon">
